# OMG_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  models_to_run_small.omg  models_to_run_very_small.omg  omg_installer.sh  prep_omg.sh  run_config.omg
aux/: run_model_checker.py
code/: main.cpp
code/abstraction/: abstract_state.cpp  abstract_state.h  abstract_structure.cpp  abstract_structure.h  abstraction_classifier.cpp  abstraction_classifier.h
code/configuration/: omg_config.cpp  omg_config.h
code/formulas/: prop_formula.cpp  prop_formula.h  sat_solver.cpp  sat_solver.h
code/model_checking/: goal.cpp  goal.h  omg_model_checker.cpp  omg_model_checker.h
code/parsers/: aig_parser.cpp  aig_parser.h  ctl_file_parser.cpp  ctl_file_parser.h  ctl_parser.cpp  ctl_parser.h  ctl_parser_data.cpp  ctl_parser_data.h  lexer.cpp  lexer.h
code/structures/: concrete_set.cpp  concrete_set.h  concrete_state.cpp  concrete_state.h  kripke_structure.cpp  kripke_structure.h  unwinding_tree.cpp  unwinding_tree.h
code/temporal/: ctl_formula.cpp  ctl_formula.h
code/utils/: Stats.h  bdd_utils.cpp  bdd_utils.h  cartesian_product_generator.cpp  cartesian_product_generator.h  omg_exception.h  omg_utils.h  string_utils.cpp  string_utils.h  version_manager.cpp  version_manager.h  z3_utils.cpp  z3_utils.h
code/utils/aiger-1.9.9/: CMakeLists.txt  aig_to_aag.cpp  aig_to_aag.h  makefile
cudd-3.0.0/: Makefile  config.status  libtool
cudd-3.0.0/cplusplus/: test.tst
cudd-3.0.0/cudd/: extra.tst  r7x8.1.tst  testcudd  testextra
cudd-3.0.0/dddmp/: testdddmp
cudd-3.0.0/mtr/: test.tst  testmtr
cudd-3.0.0/nanotrav/: C17.tst  C880.tst  adj49.tst  closest.tst  ham01.tst  miniFirst.tst  mult32a.tst  nanotrav  rcn25.tst  s27.tst  s27b.tst  s27c.tst  s382.tst  s641.tst
cudd-3.0.0/st/: testst
installation/: omg_installer.sh
installation/iimc/: ProofAttachment.cpp  get_iimc.sh
resources/: FPMult.ctl  af_ag.aag  am2901.aig  am2901.ctl  am2910.aig  am2910.ctl  amba4.aag  bufferAlloc.aag  coherence2.aag  debug.aag  fifteen.ctl  gatedClock.aag  gatedClock.ctl  gray.aag  gray.ctl  gtdclk2.aag  gtdclk2.ctl  heap.aag  newnim.aag  pf.aag  rrff.aag  rrobin.aag  soap.aig  soap.ctl  spinner4.aag  swap.aag  syncarb.ctl  tstrst.aag  tstrst.ctl  twophase.aag
